--- a/index.html
+++ b/index.html
@@ -3,53 +3,379 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Music Player</title>
+    <title>Sleek Music Player</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
+        :root {
+            --primary-color: #1DB954;
+            --bg-color: #121212;
+            --surface-color: #282828;
+            --text-color: #ffffff;
+        }
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
+            background-color: var(--bg-color);
+            color: var(--text-color);
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #f0f0f0;
+        }
+        .player-container {
+            display: flex;
+            background-color: var(--surface-color);
+            border-radius: 20px;
+            overflow: hidden;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.3);
         }
         .player {
-            background-color: #fff;
-            padding: 20px;
+            padding: 30px;
+            width: 350px;
+        }
+        .album-art {
+            width: 100%;
+            height: 350px;
+            background-color: #333;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            overflow: hidden;
+            margin-bottom: 20px;
+            position: relative;
+        }
+        .album-art img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.3s ease;
+        }
+        .album-art:hover img {
+            transform: scale(1.05);
+        }
+        .song-info {
             text-align: center;
+            margin-bottom: 20px;
+        }
+        .song-title {
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+        .artist {
+            font-size: 18px;
+            color: #b3b3b3;
+        }
+        .progress-container {
+            width: 100%;
+            height: 5px;
+            background-color: #5a5a5a;
+            border-radius: 5px;
+            margin-bottom: 20px;
+            cursor: pointer;
+        }
+        .progress-bar {
+            width: 0%;
+            height: 100%;
+            background-color: var(--primary-color);
+            border-radius: 5px;
+            transition: width 0.1s linear;
+        }
+        .time-info {
+            display: flex;
+            justify-content: space-between;
+            font-size: 14px;
+            margin-bottom: 20px;
         }
         .controls {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+        .control-btn {
+            background: none;
+            border: none;
+            color: var(--text-color);
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+        .control-btn:hover {
+            color: var(--primary-color);
+        }
+        .control-btn i {
+            font-size: 36px;
+        }
+        .play-pause i {
+            font-size: 48px;
+        }
+        .volume-container {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+        .volume-slider {
+            -webkit-appearance: none;
+            width: 100px;
+            height: 5px;
+            border-radius: 5px;
+            background: #5a5a5a;
+            outline: none;
+        }
+        .volume-slider::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 15px;
+            height: 15px;
+            border-radius: 50%;
+            background: var(--primary-color);
+            cursor: pointer;
+        }
+        .playlist {
+            width: 250px;
+            background-color: #1e1e1e;
+            overflow-y: auto;
+            padding: 20px;
+        }
+        .playlist-item {
+            padding: 10px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            border-radius: 5px;
+            margin-bottom: 5px;
+        }
+        .playlist-item:hover {
+            background-color: #3a3a3a;
+        }
+        .playlist-item.active {
+            background-color: #3a3a3a;
+            color: var(--primary-color);
+        }
+        .visualizer {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+            height: 50px;
             margin-top: 20px;
         }
-        button {
-            background-color: #4CAF50;
-            border: none;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            border-radius: 5px;
+        .bar {
+            width: 5px;
+            background-color: var(--primary-color);
+            transition: height 0.1s ease;
         }
     </style>
 </head>
 <body>
-    <div class="player">
-        <h1>Simple Music Player</h1>
-        <audio id="audio-player" controls>
-            <source src="Digital-Requim.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-        </audio>
-        <div class="controls">
-            <button onclick="document.getElementById('audio-player').play()">Play</button>
-            <button onclick="document.getElementById('audio-player').pause()">Pause</button>
+    <div class="player-container">
+        <div class="player">
+            <div class="album-art">
+                <img src="/api/placeholder/350/350" alt="Album Art" id="album-art">
+            </div>
+            <div class="song-info">
+                <div class="song-title" id="song-title">Song Title</div>
+                <div class="artist" id="artist">Artist Name</div>
+            </div>
+            <div class="progress-container" id="progress-container">
+                <div class="progress-bar" id="progress-bar"></div>
+            </div>
+            <div class="time-info">
+                <span id="current-time">0:00</span>
+                <span id="duration">0:00</span>
+            </div>
+            <div class="controls">
+                <button class="control-btn" id="shuffle"><i class="material-icons">shuffle</i></button>
+                <button class="control-btn" id="prev"><i class="material-icons">skip_previous</i></button>
+                <button class="control-btn play-pause" id="play-pause"><i class="material-icons">play_arrow</i></button>
+                <button class="control-btn" id="next"><i class="material-icons">skip_next</i></button>
+                <button class="control-btn" id="repeat"><i class="material-icons">repeat</i></button>
+            </div>
+            <div class="volume-container">
+                <button class="control-btn" id="mute"><i class="material-icons">volume_up</i></button>
+                <input type="range" class="volume-slider" id="volume-slider" min="0" max="1" step="0.1" value="1">
+            </div>
+            <div class="visualizer" id="visualizer"></div>
         </div>
+        <div class="playlist" id="playlist"></div>
     </div>
+
+    <script>
+        const audioPlayer = new Audio();
+        const playPauseBtn = document.getElementById('play-pause');
+        const prevBtn = document.getElementById('prev');
+        const nextBtn = document.getElementById('next');
+        const shuffleBtn = document.getElementById('shuffle');
+        const repeatBtn = document.getElementById('repeat');
+        const muteBtn = document.getElementById('mute');
+        const volumeSlider = document.getElementById('volume-slider');
+        const progressContainer = document.getElementById('progress-container');
+        const progressBar = document.getElementById('progress-bar');
+        const currentTimeEl = document.getElementById('current-time');
+        const durationEl = document.getElementById('duration');
+        const visualizer = document.getElementById('visualizer');
+        const playlist = document.getElementById('playlist');
+        const albumArt = document.getElementById('album-art');
+        const songTitleEl = document.getElementById('song-title');
+        const artistEl = document.getElementById('artist');
+
+        let isPlaying = false;
+        let isShuffle = false;
+        let isRepeat = false;
+        let currentSongIndex = 0;
+
+        const songs = [
+            { title: 'Digital Requim', artist: 'Vqesh', src: 'Digital-Requim.mp3', art: 'Cute.jpeg' },
+            { title: 'Digital Dreamscape', artist: 'Vqesh', src: 'Digital-Dreamscape.mp3', art: 'Watching.png' },
+            { title: 'Pixel Dreamscape', artist: 'Vqesh', src: 'Pixel-Dreamscape.mp3', art: 'Sleep.jpeg' },
+        ];
+
+        function loadSong(index) {
+            const song = songs[index];
+            audioPlayer.src = song.src;
+            albumArt.src = song.art;
+            songTitleEl.textContent = song.title;
+            artistEl.textContent = song.artist;
+            currentSongIndex = index;
+            updatePlaylistActiveItem();
+        }
+
+        function updatePlaylistActiveItem() {
+            const items = playlist.getElementsByClassName('playlist-item');
+            for (let i = 0; i < items.length; i++) {
+                items[i].classList.remove('active');
+                if (i === currentSongIndex) {
+                    items[i].classList.add('active');
+                }
+            }
+        }
+
+        function togglePlayPause() {
+            if (isPlaying) {
+                audioPlayer.pause();
+                playPauseBtn.innerHTML = '<i class="material-icons">play_arrow</i>';
+            } else {
+                audioPlayer.play();
+                playPauseBtn.innerHTML = '<i class="material-icons">pause</i>';
+            }
+            isPlaying = !isPlaying;
+        }
+
+        function updateProgress() {
+            const { duration, currentTime } = audioPlayer;
+            const progressPercent = (currentTime / duration) * 100;
+            progressBar.style.width = `${progressPercent}%`;
+            currentTimeEl.textContent = formatTime(currentTime);
+            durationEl.textContent = formatTime(duration);
+        }
+
+        function formatTime(time) {
+            const minutes = Math.floor(time / 60);
+            const seconds = Math.floor(time % 60);
+            return `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
+        }
+
+        function setProgress(e) {
+            const width = this.clientWidth;
+            const clickX = e.offsetX;
+            const duration = audioPlayer.duration;
+            audioPlayer.currentTime = (clickX / width) * duration;
+        }
+
+        function prevSong() {
+            currentSongIndex--;
+            if (currentSongIndex < 0) {
+                currentSongIndex = songs.length - 1;
+            }
+            loadSong(currentSongIndex);
+            if (isPlaying) audioPlayer.play();
+        }
+
+        function nextSong() {
+            currentSongIndex++;
+            if (currentSongIndex > songs.length - 1) {
+                currentSongIndex = 0;
+            }
+            loadSong(currentSongIndex);
+            if (isPlaying) audioPlayer.play();
+        }
+
+        function toggleShuffle() {
+            isShuffle = !isShuffle;
+            shuffleBtn.style.color = isShuffle ? 'var(--primary-color)' : 'var(--text-color)';
+        }
+
+        function toggleRepeat() {
+            isRepeat = !isRepeat;
+            repeatBtn.style.color = isRepeat ? 'var(--primary-color)' : 'var(--text-color)';
+        }
+
+        function toggleMute() {
+            audioPlayer.muted = !audioPlayer.muted;
+            muteBtn.innerHTML = audioPlayer.muted ? '<i class="material-icons">volume_off</i>' : '<i class="material-icons">volume_up</i>';
+        }
+
+        function handleVolumeChange() {
+            audioPlayer.volume = volumeSlider.value;
+            muteBtn.innerHTML = audioPlayer.volume === 0 ? '<i class="material-icons">volume_off</i>' : '<i class="material-icons">volume_up</i>';
+        }
+
+        // Create visualizer bars
+        for (let i = 0; i < 30; i++) {
+            const bar = document.createElement('div');
+            bar.className = 'bar';
+            visualizer.appendChild(bar);
+        }
+
+        function animateVisualizer() {
+            if (isPlaying) {
+                const bars = visualizer.children;
+                for (let bar of bars) {
+                    const height = Math.random() * 50;
+                    bar.style.height = `${height}px`;
+                }
+            }
+            requestAnimationFrame(animateVisualizer);
+        }
+
+        // Populate playlist
+        songs.forEach((song, index) => {
+            const item = document.createElement('div');
+            item.classList.add('playlist-item');
+            item.textContent = `${song.title} - ${song.artist}`;
+            item.addEventListener('click', () => {
+                loadSong(index);
+                if (isPlaying) audioPlayer.play();
+            });
+            playlist.appendChild(item);
+        });
+
+        // Event listeners
+        playPauseBtn.addEventListener('click', togglePlayPause);
+        prevBtn.addEventListener('click', prevSong);
+        nextBtn.addEventListener('click', nextSong);
+        shuffleBtn.addEventListener('click', toggleShuffle);
+        repeatBtn.addEventListener('click', toggleRepeat);
+        muteBtn.addEventListener('click', toggleMute);
+        volumeSlider.addEventListener('input', handleVolumeChange);
+        progressContainer.addEventListener('click', setProgress);
+
+        audioPlayer.addEventListener('timeupdate', updateProgress);
+        audioPlayer.addEventListener('ended', () => {
+            if (isRepeat) {
+                audioPlayer.currentTime = 0;
+                audioPlayer.play();
+            } else if (isShuffle) {
+                let newIndex;
+                do {
+                    newIndex = Math.floor(Math.random() * songs.length);
+                } while (newIndex === currentSongIndex);
+                loadSong(newIndex);
+                audioPlayer.play();
+            } else {
+                nextSong();
+            }
+        });
+
+        // Initial load
+        loadSong(0);
+        animateVisualizer();
+    </script>
 </body>
 </html>
