--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             --surface-color: #282828;
             --text-color: #ffffff;
         }
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
         body {
             font-family: 'Arial', sans-serif;
             background-color: var(--bg-color);
@@ -19,23 +24,26 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
+            min-height: 100vh;
+            padding: 20px;
         }
         .player-container {
             display: flex;
+            flex-direction: column;
             background-color: var(--surface-color);
             border-radius: 20px;
             overflow: hidden;
             box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+            max-width: 100%;
+            width: 600px;
         }
         .player {
-            padding: 30px;
-            width: 350px;
+            padding: 20px;
+            width: 100%;
         }
         .album-art {
             width: 100%;
-            height: 350px;
+            padding-top: 100%; /* 1:1 Aspect Ratio */
             background-color: #333;
             border-radius: 10px;
             overflow: hidden;
@@ -43,6 +51,9 @@
             position: relative;
         }
         .album-art img {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
             object-fit: cover;
@@ -130,10 +141,11 @@
             cursor: pointer;
         }
         .playlist {
-            width: 250px;
+            width: 100%;
             background-color: #1e1e1e;
             overflow-y: auto;
             padding: 20px;
+            max-height: 300px;
         }
         .playlist-item {
             padding: 10px;
@@ -160,6 +172,19 @@
             width: 5px;
             background-color: var(--primary-color);
             transition: height 0.1s ease;
+        }
+        @media (min-width: 768px) {
+            .player-container {
+                flex-direction: row;
+                width: 800px;
+            }
+            .player {
+                width: 60%;
+            }
+            .playlist {
+                width: 40%;
+                max-height: none;
+            }
         }
     </style>
 </head>
