--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
         .player-container {
             display: flex;
             flex-direction: column;
-            background-color: var(--surface-color);
+            background-color: rgba(40, 40, 40, 0.8);
             border-radius: 20px;
             overflow: hidden;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.3);
             max-width: 100%;
             width: 600px;
+            backdrop-filter: blur(10px);
         }
         .player {
             padding: 20px;
@@ -43,12 +44,13 @@
         }
         .album-art {
             width: 100%;
-            padding-top: 100%; /* 1:1 Aspect Ratio */
+            padding-top: 100%;
             background-color: #333;
             border-radius: 10px;
             overflow: hidden;
             margin-bottom: 20px;
             position: relative;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
         .album-art img {
             position: absolute;
@@ -57,10 +59,10 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            transition: transform 0.3s ease;
+            transition: transform 0.5s ease;
         }
         .album-art:hover img {
-            transform: scale(1.05);
+            transform: scale(1.1) rotate(1deg);
         }
         .song-info {
             text-align: center;
@@ -82,6 +84,7 @@
             border-radius: 5px;
             margin-bottom: 20px;
             cursor: pointer;
+            overflow: hidden;
         }
         .progress-bar {
             width: 0%;
@@ -89,6 +92,19 @@
             background-color: var(--primary-color);
             border-radius: 5px;
             transition: width 0.1s linear;
+            position: relative;
+        }
+        .progress-bar::after {
+            content: '';
+            position: absolute;
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 12px;
+            height: 12px;
+            background-color: #fff;
+            border-radius: 50%;
+            box-shadow: 0 0 5px rgba(0,0,0,0.3);
         }
         .time-info {
             display: flex;
@@ -111,6 +127,10 @@
         }
         .control-btn:hover {
             color: var(--primary-color);
+            transform: scale(1.2);
+        }
+        .control-btn:active {
+            transform: scale(0.95);
         }
         .control-btn i {
             font-size: 36px;
@@ -130,6 +150,11 @@
             border-radius: 5px;
             background: #5a5a5a;
             outline: none;
+            opacity: 0.7;
+            transition: opacity 0.2s;
+        }
+        .volume-slider:hover {
+            opacity: 1;
         }
         .volume-slider::-webkit-slider-thumb {
             -webkit-appearance: none;
@@ -139,10 +164,14 @@
             border-radius: 50%;
             background: var(--primary-color);
             cursor: pointer;
+            transition: all 0.2s;
+        }
+        .volume-slider::-webkit-slider-thumb:hover {
+            transform: scale(1.2);
         }
         .playlist {
             width: 100%;
-            background-color: #1e1e1e;
+            background-color: rgba(30, 30, 30, 0.8);
             overflow-y: auto;
             padding: 20px;
             max-height: 300px;
@@ -150,12 +179,13 @@
         .playlist-item {
             padding: 10px;
             cursor: pointer;
-            transition: background-color 0.3s ease;
+            transition: all 0.3s ease;
             border-radius: 5px;
             margin-bottom: 5px;
         }
         .playlist-item:hover {
             background-color: #3a3a3a;
+            transform: translateX(5px);
         }
         .playlist-item.active {
             background-color: #3a3a3a;
