--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sleek Music Player</title>
+    <title>Enhanced Sleek Music Player</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         :root {
@@ -11,6 +11,7 @@
             --bg-color: #121212;
             --surface-color: #282828;
             --text-color: #ffffff;
+            --text-secondary: #b3b3b3;
         }
         * {
             box-sizing: border-box;
@@ -18,7 +19,7 @@
             padding: 0;
         }
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Roboto', sans-serif;
             background-color: var(--bg-color);
             color: var(--text-color);
             display: flex;
@@ -27,28 +28,37 @@
             min-height: 100vh;
             padding: 20px;
         }
+        @keyframes moveBackground {
+            0% {
+                background-position: 0 0;
+            }
+            100% {
+                background-position: 40px 40px;
+            }
+        }
         .player-container {
             display: flex;
             flex-direction: column;
-            background-color: rgba(40, 40, 40, 0.8);
+            background-color: rgba(40, 40, 40, 0.9);
             border-radius: 20px;
             overflow: hidden;
             box-shadow: 0 10px 30px rgba(0,0,0,0.3);
             max-width: 100%;
-            width: 600px;
+            width: 400px;
             backdrop-filter: blur(10px);
+            transition: all 0.3s ease;
         }
         .player {
-            padding: 20px;
+            padding: 30px;
             width: 100%;
         }
         .album-art {
             width: 100%;
             padding-top: 100%;
             background-color: #333;
-            border-radius: 10px;
+            border-radius: 15px;
             overflow: hidden;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
             position: relative;
             box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
@@ -66,23 +76,25 @@
         }
         .song-info {
             text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
         .song-title {
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 5px;
+            font-size: 28px;
+            font-weight: 500;
+            margin-bottom: 10px;
+            color: var(--primary-color);
         }
         .artist {
-            font-size: 18px;
-            color: #b3b3b3;
+            font-size: 20px;
+            color: var(--text-secondary);
+            font-weight: 300;
         }
         .progress-container {
             width: 100%;
-            height: 5px;
+            height: 6px;
             background-color: #5a5a5a;
-            border-radius: 5px;
-            margin-bottom: 20px;
+            border-radius: 3px;
+            margin-bottom: 15px;
             cursor: pointer;
             overflow: hidden;
         }
@@ -90,14 +102,14 @@
             width: 0%;
             height: 100%;
             background-color: var(--primary-color);
-            border-radius: 5px;
+            border-radius: 3px;
             transition: width 0.1s linear;
             position: relative;
         }
         .progress-bar::after {
             content: '';
             position: absolute;
-            right: 0;
+            right: -6px;
             top: 50%;
             transform: translateY(-50%);
             width: 12px;
@@ -105,18 +117,24 @@
             background-color: #fff;
             border-radius: 50%;
             box-shadow: 0 0 5px rgba(0,0,0,0.3);
+            opacity: 0;
+            transition: opacity 0.2s ease;
+        }
+        .progress-container:hover .progress-bar::after {
+            opacity: 1;
         }
         .time-info {
             display: flex;
             justify-content: space-between;
             font-size: 14px;
-            margin-bottom: 20px;
+            margin-bottom: 25px;
+            color: var(--text-secondary);
         }
         .controls {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 20px;
+            margin-bottom: 25px;
         }
         .control-btn {
             background: none;
@@ -124,19 +142,21 @@
             color: var(--text-color);
             cursor: pointer;
             transition: all 0.3s ease;
+            opacity: 0.7;
         }
         .control-btn:hover {
             color: var(--primary-color);
             transform: scale(1.2);
+            opacity: 1;
         }
         .control-btn:active {
             transform: scale(0.95);
         }
         .control-btn i {
-            font-size: 36px;
+            font-size: 32px;
         }
         .play-pause i {
-            font-size: 48px;
+            font-size: 56px;
         }
         .volume-container {
             display: flex;
@@ -147,7 +167,7 @@
             -webkit-appearance: none;
             width: 100px;
             height: 5px;
-            border-radius: 5px;
+            border-radius: 2.5px;
             background: #5a5a5a;
             outline: none;
             opacity: 0.7;
@@ -171,37 +191,48 @@
         }
         .playlist {
             width: 100%;
-            background-color: rgba(30, 30, 30, 0.8);
+            background-color: rgba(30, 30, 30, 0.9);
             overflow-y: auto;
             padding: 20px;
-            max-height: 300px;
+            max-height: 250px;
         }
         .playlist-item {
-            padding: 10px;
+            padding: 12px;
             cursor: pointer;
             transition: all 0.3s ease;
             border-radius: 5px;
-            margin-bottom: 5px;
+            margin-bottom: 8px;
+            opacity: 0.7;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
         .playlist-item:hover {
             background-color: #3a3a3a;
             transform: translateX(5px);
+            opacity: 1;
         }
         .playlist-item.active {
             background-color: #3a3a3a;
             color: var(--primary-color);
+            opacity: 1;
+        }
+        .playlist-item-duration {
+            font-size: 0.8em;
+            color: var(--text-secondary);
         }
         .visualizer {
             display: flex;
             justify-content: space-between;
             align-items: flex-end;
             height: 50px;
-            margin-top: 20px;
+            margin-top: 25px;
         }
         .bar {
             width: 5px;
             background-color: var(--primary-color);
             transition: height 0.1s ease;
+            border-radius: 2.5px;
         }
         @media (min-width: 768px) {
             .player-container {
@@ -216,9 +247,22 @@
                 max-height: none;
             }
         }
+        .theme-toggle {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background: none;
+            border: none;
+            color: var(--text-color);
+            cursor: pointer;
+            font-size: 24px;
+        }
     </style>
 </head>
 <body>
+    <button class="theme-toggle" id="theme-toggle">
+        <i class="material-icons">brightness_6</i>
+    </button>
     <div class="player-container">
         <div class="player">
             <div class="album-art">
@@ -269,6 +313,7 @@
         const albumArt = document.getElementById('album-art');
         const songTitleEl = document.getElementById('song-title');
         const artistEl = document.getElementById('artist');
+        const themeToggle = document.getElementById('theme-toggle');
 
         let isPlaying = false;
         let isShuffle = false;
@@ -276,9 +321,9 @@
         let currentSongIndex = 0;
 
         const songs = [
-            { title: 'Requim', artist: 'Vqesh', src: 'Audio/Requim.mp3', art: 'Cute.jpeg' },
-            { title: 'Dreamscape', artist: 'Vqesh', src: 'Audio/Dreamscape.mp3', art: 'Watching.png' },
-            { title: 'Echo', artist: 'Vqesh', src: 'Audio/Echo.mp3', art: 'Sleep.jpeg' },
+            { title: 'Requim', artist: 'Vqesh', src: 'Audio/Requim.mp3', art: 'Cute.jpeg', duration: 180 },
+            { title: 'Dreamscape', artist: 'Vqesh', src: 'Audio/Dreamscape.mp3', art: 'Watching.png', duration: 210 },
+            { title: 'Echo', artist: 'Vqesh', src: 'Audio/Echo.mp3', art: 'Sleep.jpeg', duration: 195 },
         ];
 
         function loadSong(index) {
@@ -402,7 +447,10 @@
         songs.forEach((song, index) => {
             const item = document.createElement('div');
             item.classList.add('playlist-item');
-            item.textContent = `${song.title} - ${song.artist}`;
+            item.innerHTML = `
+                <span>${song.title} - ${song.artist}</span>
+                <span class="playlist-item-duration">${formatTime(song.duration)}</span>
+            `;
             item.addEventListener('click', () => {
                 loadSong(index);
                 if (isPlaying) audioPlayer.play();
@@ -438,6 +486,47 @@
         });
         audioPlayer.addEventListener('loadedmetadata', () => {
             durationEl.textContent = formatTime(audioPlayer.duration);
+        });
+
+        // Theme toggle functionality
+        let isDarkTheme = true;
+        themeToggle.addEventListener('click', () => {
+            isDarkTheme = !isDarkTheme;
+            if (isDarkTheme) {
+                document.documentElement.style.setProperty('--bg-color', '#121212');
+                document.documentElement.style.setProperty('--surface-color', '#282828');
+                document.documentElement.style.setProperty('--text-color', '#ffffff');
+                document.documentElement.style.setProperty('--text-secondary', '#b3b3b3');
+            } else {
+                document.documentElement.style.setProperty('--bg-color', '#f5f5f5');
+                document.documentElement.style.setProperty('--surface-color', '#ffffff');
+                document.documentElement.style.setProperty('--text-color', '#333333');
+                document.documentElement.style.setProperty('--text-secondary', '#666666');
+            }
+        });
+
+        // Keyboard controls
+        document.addEventListener('keydown', (e) => {
+            switch(e.code) {
+                case 'Space':
+                    e.preventDefault();
+                    togglePlayPause();
+                    break;
+                case 'ArrowLeft':
+                    audioPlayer.currentTime -= 5;
+                    break;
+                case 'ArrowRight':
+                    audioPlayer.currentTime += 5;
+                    break;
+                case 'ArrowUp':
+                    volumeSlider.value = Math.min(1, parseFloat(volumeSlider.value) + 0.1);
+                    handleVolumeChange();
+                    break;
+                case 'ArrowDown':
+                    volumeSlider.value = Math.max(0, parseFloat(volumeSlider.value) - 0.1);
+                    handleVolumeChange();
+                    break;
+            }
         });
 
         // Initial load
