cleaned images, corrected title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sleek Music Player</title>
+    <title>Music-ify</title>
+    <link rel="icon" type="image/x-icon" href="Images/Note-modified.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         :root {
@@ -300,9 +301,9 @@
         let currentSongIndex = 0;
 
         const songs = [
-            { title: 'Requim', artist: 'Vqesh', src: 'Audio/Requim.mp3', art: 'Cute.jpeg' },
-            { title: 'Dreamscape', artist: 'Vqesh', src: 'Audio/Dreamscape.mp3', art: 'Watching.png' },
-            { title: 'Echo', artist: 'Vqesh', src: 'Audio/Echo.mp3', art: 'Sleep.jpeg' },
+            { title: 'Requim', artist: 'Vqesh', src: 'Audio/Requim.mp3', art: 'Images/Cute.jpeg' },
+            { title: 'Dreamscape', artist: 'Vqesh', src: 'Audio/Dreamscape.mp3', art: 'Images/Watching.png' },
+            { title: 'Echo', artist: 'Vqesh', src: 'Audio/Echo.mp3', art: 'Images/Sleep.jpeg' },
         ];
 
         function loadSong(index) {
