add & change audio

--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
         let currentSongIndex = 0;
 
         const songs = [
-            { title: 'Requim', artist: 'Vqesh', src: 'Audio/Requim.mp3', art: 'Images/Cute.jpeg' },
-            { title: 'Dreamscape', artist: 'Vqesh', src: 'Audio/Dreamscape.mp3', art: 'Images/Watching.png' },
+        { title: 'Requim', artist: 'Vqesh', src: 'Audio/Requim.mp3', art: 'Images/Cute.jpeg' },
+        { title: 'Alive', artist: 'Vqesh', src: 'Audio/Alive.mp3', art: 'Images/Alive.jpeg' },
             { title: 'Echo', artist: 'Vqesh', src: 'Audio/Echo.mp3', art: 'Images/Sleep.jpeg' },
         ];
 
