fixed "Requiem" cause I don't know how to spell

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         let crossfadeInterval;
 
         const songs = [
-            { title: 'Requim', artist: 'Vqesh', src: 'Audio/Requim.mp3', art: 'Images/Cute.jpeg' },
+            { title: 'Requiem', artist: 'Vqesh', src: 'Audio/Requiem.mp3', art: 'Images/Cute.jpeg' },
             { title: 'Alive', artist: 'Vqesh', src: 'Audio/Alive.mp3', art: 'Images/Alive.jpeg' },
             { title: 'Echo', artist: 'Vqesh', src: 'Audio/Echo.mp3', art: 'Images/Sleep.jpeg' },
         ];
