changed audio & images

--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
         let crossfadeInterval;
 
         const songs = [
+        { title: 'Dreams', artist: 'Vqesh', src: 'Audio/Dreams.mp3', art: 'Images/Dreams.jpeg' },
             { title: 'Requiem', artist: 'Vqesh', src: 'Audio/Requiem.mp3', art: 'Images/Cute.jpeg' },
             { title: 'Alive', artist: 'Vqesh', src: 'Audio/Alive.mp3', art: 'Images/Alive.jpeg' },
             { title: 'Echo', artist: 'Vqesh', src: 'Audio/Echo.mp3', art: 'Images/Sleep.jpeg' },
