--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music-ify</title>
-    <link rel="icon" type="image/x-icon" href="Images/Note-modified.png">
+    <link rel="icon" type="image/x-icon" href="Images/Noted.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         :root {
